[project]
name = "nrpt"
version = "0.1.0"
description = "A JAX-based, NumPyro-compatible implementation of Non-Reversible Parallel Tempering (NRPT)"
authors = [
    {name = "Miguel Biron-Lattes",email = "miguelbl9@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "numpyro",
    "autostep"
]

[project.urls]
Repository = "https://github.com/Estep-Bingham-Lab/nrpt.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
